# beauty

./: .clang-format  .gitignore  CMakeLists.txt
data/: chrome_multipart.txt  firefox_multipart.txt  secondpart.txt  testfile01.txt
examples/: CMakeLists.txt
examples/pc/: file_handler.cpp  file_handler.hpp  file_storage_handler.cpp  file_storage_handler.hpp
src/: CMakeLists.txt  beauty_common.hpp  connection.cpp  connection.hpp  connection_manager.cpp  connection_manager.hpp  file_handler.cpp  file_handler.hpp  file_storage_handler.cpp  file_storage_handler.hpp  http_result2.hpp  i_file_handler.hpp  main.cpp  multipart_parser.cpp  multipart_parser.hpp  parse_common.hpp  reply.cpp  reply.hpp  request.hpp  request_decoder.cpp  request_decoder.hpp  request_handler.cpp  request_handler.hpp  request_parser.cpp  request_parser.hpp  server.cpp  server.hpp
test/: CMakeLists.txt  file_handler_test.cpp  multipart_parser_test.cpp  request_decoder_test.cpp  request_parser_test.cpp  server_test.cpp  url_parser_test.cpp
test/utils/: mock_file_handler.cpp  mock_file_handler.hpp  mock_request_handler.cpp  mock_request_handler.hpp  test_client.hpp
